crates/oxc_css/tests/recoverable/at-rule/keyframes.css.error.snap
---
source: crates/oxc_css/tests/recoverable.rs
---
error: unknown keyframe selector
  ┌─ keyframes.css:2:3
  │
2 │   form {}
  │   ^^^^


